fixed sections overflow

--- a/styles/creator.css
+++ b/styles/creator.css
@@ -13,10 +13,6 @@
   }
 }
 
-.section-main {
-  overflow-x: hidden;
-}
-
 .creator-header {
   padding-top: 4rem;
   padding-bottom: 4rem;
